test/upgrade/testdata/customCrs/externalNames/serviceRouteBinding/import_domain.yaml
apiVersion: cloudfoundry.crossplane.io/v1alpha1
kind: Domain
metadata:
  name: upgrade-test-domain
spec:
  managementPolicies:
    - Observe
  forProvider:
    name: cfapps.eu12.hana.ondemand.com
    orgRef:
      name: upgrade-test-org
      policy:
        resolve: Always
    internal: false
