test/upgrade/testdata/customCrs/externalNames/serviceRouteBinding/service_instance.yaml
apiVersion: cloudfoundry.crossplane.io/v1alpha1
kind: ServiceInstance
metadata:
  name: upgrade-test-serviceinstance
  namespace: service-test
spec:
  providerConfigRef:
    name: default
  forProvider:
    type: user-provided
    name: upgrade-test-serviceinstance
    spaceRef:
      name: upgrade-test-import-space
      policy:
        resolve: Always
    routeServiceUrl: https://example-route-service.local/forward
